Made more performance improvements

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta charset="utf-8">
 	<title>Konstantin Minihuber</title>
 	<meta name="description" content="Meine Webseite.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 	<div id="navbar">
 		<div class="navbar-item">
-			<a href="./1bhitm_minihuber_konstantin.html" class="link">Startseite</a>
+			<a href="index.html" class="link">Startseite</a>
 		</div>
 		<div class="navbar-item">
 			<a href="slideshow/index.html" class="link">Slide Show</a>
@@ -29,9 +30,6 @@
 	<br>
 	<br>
 	<br>
-	<span class="languageselection">Deutsch</span>
-	<label for="languageswitcher"></label><input type="checkbox" id="languageswitcher">
-	<span class="languageselection">English</span>
 	<br>
 	<br>
 	<h1>Konstantin Minihuber</h1>
@@ -48,7 +46,7 @@
 			<li>Programmieren.</li>
 			<li>Bildbearbeitung.</li>
 			<li>Genshin Impact und Minecraft spielen.</li>
-			<li>Jeden meiner Sätze mit einen Punkt beenden, auch bei Orten wo es niemanden interessiert ob man
+			<li>Jeden meiner Sätze mit einem Punkt beenden, auch bei Orten wo es niemanden interessiert, ob man
 				richtige
 				Grammatik verwendet.</li>
 			<li>Von ._. besessen sein.</li>
@@ -61,47 +59,6 @@
 		<br>
 		<br>
 		<br>
-		<br>
-	</div>
-	<div id="infos" class="english">
-		<h2>Informations:</h2>
-		<p>Hi!<br>I am Konstantin Minihuber, a 14 years old student from the HTL Leonding. My birthday is May 15th,
-			2007. I have an english youtube channel, that contains extremely bad videos!<br>My hobbies are:</p>
-		<br>
-		<br>
-		<ul id="hobbies">
-			<li>Programming.</li>
-			<li>Image editing.</li>
-			<li>Genshin Impact and Minecraft.</li>
-			<li>Writing dots at the end of every sentence, even at places where no one cares about proper grammar.</li>
-			<li>Help me ._. is posessing me.</li>
-			<li>Making a ._.-TP for Minecraft.</li>
-			<li>Sometimes watching anime.</li>
-			<li>Solving the rubik's cube.</li>
-			<li>Chess.</li>
-		</ul>
-		<br>
-		<br>
-		<br>
-	<br>
-	<div class="german">
-		<h2>Kontaktmöglichkeiten:</h2>
-		<br>
-		<p>Private E-Mail: <a href="mailto:konni.minihuber@gmail.com" class="link">konni.minihuber@gmail.com</a></p>
-		<p>Öffentliche E-Mail: <a href="mailto:keymastereren@gmail.com" class="link">keymastereren@gmail.com</a></p>
-		<p>Discord: <a href="https://discord.com" class="link">Keymasterer44#4444</a></p>
-		<p>Youtube: <a href="https://www.youtube.com/channel/UC7zwiRmUEKxBIdlreOxKB5g" class="link">Keymasterer44</a>
-		</p>
-		<br>
-	</div>
-	<div class="english">
-		<h2>Ways to contact me:</h2>
-		<br>
-		<p>Private email: <a href="mailto:konni.minihuber@gmail.com" class="link">konni.minihuber@gmail.com</a></p>
-		<p>Public email: <a href="mailto:keymastereren@gmail.com" class="link">keymastereren@gmail.com</a></p>
-		<p>Discord: <a href="https://discord.com" class="link">Keymasterer44#4444</a></p>
-		<p>Youtube: <a href="https://www.youtube.com/channel/UC7zwiRmUEKxBIdlreOxKB5g" class="link">Keymasterer44</a>
-		</p>
 		<br>
 	</div>
 </body>
