--- a/aufgaben/aufgaben.html
+++ b/aufgaben/aufgaben.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="navbar">
 		<div class="navbar-item">
-			<a href="../1bhitm_minihuber_konstantin.html" class="link">Startseite</a>
+			<a href="../index.html" class="link">Startseite</a>
 		</div>
 		<div class="navbar-item">
 			<a href="../slideshow/index.html" class="link">Slide Show</a>
@@ -35,21 +35,14 @@
 	<br>
 	<br>
 	<br>
-	<span class="languageselection">Deutsch</span>
-	<input type="checkbox" id="languageswitcher">
-	<span class="languageselection">English</span>
 	<br>
 	<br>
 	<br>
 	<h1 class="german">Aufgaben</h1>
-	<h1 class="english">Excercises</h1>
 	<br>
 	<p class="german">Hier sind alle Webseiten, die ich im Verlauf vom Medientechnikunterricht gemacht habe. Man kann
 		sich Beschreibungen der Übungen anschauen wenn man über den Pfeil hovert.<br><span class="warning">Achtung: Die
 			meisten älteren Webseiten sehen sehr hässlich aus.</span></p>
-	<p class="english">Here are all of the web pages, that I made during the MEDT-lessons. You can view description of
-		the pages, by hovering over the arrow next to the link.<br><span class="warning">Warning: Older webpages look
-			really bad and all of the webpages are german.</span></p>
 	<br>
 	<br>
 	<div class="german">
@@ -100,7 +93,7 @@
 			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE8/UE8_News_Minihuber.html"
 					class="link">UE8</a><span class="hidden_text"><span class="normal_text"> > </span>Bei UE8 hab ich
 					probiert, meine Lehrerin zu rickrollen. <span style="font-style: italic;">Es hat nicht
-						funktioniert.</span></p>
+					funktioniert.</span></span></p>
 		</div>
 		<br>
 		<div class="no_margin_div">
@@ -193,12 +186,6 @@
 		</div>
 		<br>
 		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="flexboxfroggy.com" class="link">UE27</a><span
-					class="hidden_text"><span class="normal_text"> > </span>Diese Webseite haben wir nicht gemacht. Das
-					was wir machen mussten waren die Aufgaben auf der Webseite.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
 			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE28/UE28.html" class="link">UE28</a><span
 					class="hidden_text"><span class="normal_text"> > </span>Hier mussten wir einfach nur die auf der
 					Webseite vorhandenen Fragen beantworten.</span></p>
@@ -231,186 +218,6 @@
 		<br>
 		<br>
 		<a target="_blank" href="aufgabenliste/UExx/home.html" id="secret">Spezial-UE, die nur ich gemacht habe.</a>
-		<!--Diese UE immer als unterste UE lassen.-->
-	</div>
-	<div class="english">
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE1/UE1_HTML-Text_Minihuber.html"
-					class="link">UE1</a><span class="hidden_text"><span class="normal_text"> > </span>The purpose of
-					this excercise was understanding the difference between the p-Tag and the h-Tag.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE2/UE2_Fehlersuche_Minihuber.html"
-					class="link">UE2</a><span class="hidden_text"><span class="normal_text"> > </span>The second
-					excercise was all about fixing mistakes which our teacher purposefully put into the code.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE3/UE3_HTML-Fakten_Minihuber.html"
-					class="link">UE3</a><span class="hidden_text"><span class="normal_text"> > </span>We learned br and
-					hr in this excercise.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE4/UE4_Unterrichtsfaecher_Minihuber.html"
-					class="link">UE4</a><span class="hidden_text"><span class="normal_text"> > </span>Here, we learned
-					how to make a list.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE5/UE5_Kontinente_Minihuber.html"
-					class="link">UE5</a><span class="hidden_text"><span class="normal_text"> > </span>This is literally
-					UE4 but with a different topic.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE6/UE6_History_Minihuber.html"
-					class="link">UE6</a><span class="hidden_text"><span class="normal_text"> > </span>For UE6, we had to
-					make a webpage about HTML with all of our knowledge.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE7/UE7_Zusatzinfos_Minihuber.html"
-					class="link">UE7</a><span class="hidden_text"><span class="normal_text"> > </span>This excercise was
-					for learning how to use the title-attribute.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE8/UE8_News_Minihuber.html"
-					class="link">UE8</a><span class="hidden_text"><span class="normal_text"> > </span>Here, I tried to
-					rickroll my teacher <span style="font-style: italic;">It didn't work.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE9/startseite.html"
-					class="link">UE9</a><span class="hidden_text"><span class="normal_text"> > </span>We had to make a
-					shop to learn how to link several HTML-documents together.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE10/Bilder.html"
-					class="link">UE10</a><span class="hidden_text"><span class="normal_text"> > </span>Here, everyone
-					learned how to use images. I already knew how to, so the lesson was kinda boring.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE11/Tierinfos.html"
-					class="link">UE11</a><span class="hidden_text"><span class="normal_text"> > </span>The second
-					excercise about the img-tag.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE12/Fire.html" class="link">UE12</a><span
-					class="hidden_text"><span class="normal_text"> > </span>This page had to be themed around
-					fire.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE16/cascading_style_sheets_intern.html"
-					class="link">UE16</a><span class="hidden_text"><span class="normal_text"> > </span>My classmates
-					finally learned how to CSS. (I know that this isn't how grammar works and I don't care.).</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE17/cascading_style_sheets_extern.html"
-					class="link">UE17</a><span class="hidden_text"><span class="normal_text"> > </span>This is literally
-					UE16.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE18/20Zeilen.html"
-					class="link">UE18</a><span class="hidden_text"><span class="normal_text"> > </span>We leraned about
-					IDs and classes in this lesson.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE19/wetter.html"
-					class="link">UE19</a><span class="hidden_text"><span class="normal_text"> > </span>We learned how to
-					output small icons.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE20/index.html" class="link">UE20</a><span
-					class="hidden_text"><span class="normal_text"> > </span>The purpose of this was making a webpage
-					using div-tags.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE21/index.html" class="link">UE21</a><span
-					class="hidden_text"><span class="normal_text"> > </span>This is UE20 but <span
-						style="font-weight: bolder;">B U T T O N S </span>.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE22/background_starwars.html"
-					class="link">UE22</a><span class="hidden_text"><span class="normal_text"> > </span>This webpage hab
-					to be focused around Star Wars.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE23/UE_Flexboxen-Einführung.html"
-					class="link">UE23</a><span class="hidden_text"><span class="normal_text"> > </span>We learned how to
-					make a flexbox.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE24/index_makrofotografie.html"
-					class="link">UE24</a><span class="hidden_text"><span class="normal_text"> > </span>Here, we used
-					flexboxes to make a webpage that's not completely ugly.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE25/home.html" class="link">UE25</a><span
-					class="hidden_text"><span class="normal_text"> > </span>Here, we learned for thew MEDT-test.</span>
-			</p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE26/anno.html" class="link">UE26</a><span
-					class="hidden_text"><span class="normal_text"> > </span>In this page, we learned how to implement
-					audio- and video-files.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="flexboxfroggy.com" class="link">UE27</a><span
-					class="hidden_text"><span class="normal_text"> > </span>We didn't make this webpage. We had to do
-					the excercises which it contains.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE28/UE28.html" class="link">UE28</a><span
-					class="hidden_text"><span class="normal_text"> > </span>Here, we only had to answer some simple
-					questions about things that my classmates learned.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE29/datei1.html"
-					class="link">UE29</a><span class="hidden_text"><span class="normal_text"> > </span>I had to make a
-					vertical navbar but I didn't know how I was supposed to do it so I did it in a way that's unintended
-					for sure.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE30/home.html" class="link">UE30</a><span
-					class="hidden_text"><span class="normal_text"> > </span>This is UExx, but everthing except for the
-					navbar was already done for us.</span></p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE32/home.html" class="link">UE32</a><span
-					class="hidden_text"><span class="normal_text"> > </span>This is UE30, but slightly less easy.</span>
-			</p>
-		</div>
-		<br>
-		<div class="no_margin_div">
-			<p class="no_margin_text"><a target="_blank" href="aufgabenliste/UE33/surprise.html"
-					class="link">UE33</a><span class="hidden_text"><span class="normal_text"> > </span>We literally only
-					had to switch between two images for this.</span></p>
-		</div>
-		<br>
-		<br>
-		<a target="_blank" href="aufgabenliste/UExx/home.html" id="secret">Special-UE, which only I did.</a>
 		<!--Diese UE immer als unterste UE lassen.-->
 	</div>
 </body>
