Made more performance improvements

--- a/diceattack/game.html
+++ b/diceattack/game.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="top-info"></div>
-        <div id="content" tabindex="6"></div>
+        <div id="content"></div>
         <div id="bottom-info"></div>
     </body>
 </html>
