--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -1,23 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=5.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Meine Webseite.">
     <title>Slideshow</title>
     <link rel="stylesheet" href="pain.css">
     <script defer src="index.js"></script>
 </head>
-<body id="body" style="background-image: url(./media/img1.webp)">
+<body id="body" style="background-image: url(./media/cube1.png)">
 <div id="darkThingIdkHowToCallItTbh"></div>
 <div id="allOfThatActualSweetSweetJSEnabler">
     <h1>Slideshow</h1>
     <div style="display: flex; width: 100vw; margin: 0; padding: 0;">
-        <img id="img1" class="side-img" src="media/img1.webp">
-        <img id="img2" class="side-img" src="media/img1.webp">
-        <img id="img3" class="main-img" src="media/img1.webp">
-        <img id="img4" class="side-img" src="media/img1.webp">
-        <img id="img5" class="side-img" src="media/img1.webp">
+        <img alt="" id="img1" class="side-img" src="media/cube1.png">
+        <img alt="" id="img2" class="side-img" src="media/cube1.png">
+        <img alt="" id="img3" class="main-img" src="media/cube1.png">
+        <img alt="" id="img4" class="side-img" src="media/cube1.png">
+        <img alt="" id="img5" class="side-img" src="media/cube1.png">
     </div>
     <div class="button" onclick="slideThroughImages(false)" style="margin-left: 44.5vw;">Go left.</div>
     <div class="button" onclick="slideThroughImages(true)">Go right.</div>
