--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -12,7 +12,7 @@
 </head>
 <body id="body" style="background-image: url(./media/cube1.png)">
 <div id="darkThingIdkHowToCallItTbh"></div>
-<div id="allOfThatActualSweetSweetJSEnabler">
+<div style="display: none" id="allOfThatActualSweetSweetJSEnabler">
     <h1>Slideshow</h1>
     <div style="display: flex; width: 100vw; margin: 0; padding: 0;">
         <img alt="" id="img1" class="side-img" src="media/cube1.png">
